# viberl

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: linting.yml
ckpts/test_exp/: 0_results.txt  300000_results.txt
config/: brax.toml  custom_ppo.toml  custom_ppo_vec.toml  gymnax.toml  jumanji.toml  ppga.toml  test.toml
scripts/: nnx_train_ex.py  render.py  render_brax.py  render_gymnax.py  render_ppo.py  render_ppo_rejax.py  render_results.py  train_nb.py  train_ppga.py  train_ppo.py  train_qdrl.py  vmap_nnx.py
src/rl_sandbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rl_sandbox/env/: __init__.py  _trajectories.py  _visualize.py
src/rl_sandbox/utils/: __init__.py  _checkpoints.py  _eval_callbacks.py  _exp_manager.py  _load_ckpt.py  _logger.py  _metrics.py  _pytrees.py  _wandb_callbacks.py  _wandb_logger.py  types.py
src/viberl/algorithms/: _utils.py  _vppo.py
src/viberl/algorithms/ppga/: __init__.py  _batch_update.py  _calculate_dcd_gradients.py  _compute_dcd_grad.py  _config.py  _eval.py  _rollout.py  _state.py  _update_mean_agent.py  _utils.py
src/viberl/algorithms/ppo/: __init__.py  _batch_update.py  _config.py  _eval.py  _ppo.py  _rollout.py  _state.py  _train.py  _utils.py
src/viberl/env/: __init__.py  _trajectories.py  _visualize.py
src/viberl/models/: _actor.py  _critic.py  _qd_critic.py
src/viberl/utils/: __init__.py  _checkpoints.py  _eval_callbacks.py  _exp_manager.py  _logger.py  _mlflow_callbacks.py  _pytrees.py  _readable_hash.py  _wandb_callbacks.py  types.py
src/viberl/utils/rejax/: __init__.py  _checkpoints.py  _eval_callbacks.py  _mlflow_callbacks.py  _wandb_callbacks.py
